[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/CardTable/ReplicationAnimation.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/BoldItalics_50.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Fonts/OpenSans-Italic.ttf" type="DynamicFontData" id=13]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/OpenSans-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 45
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.94902, 0.952941, 0.956863, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20
shadow_color = Color( 0.282353, 0.282353, 0.282353, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.341176, 0.545098, 0.788235, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20
shadow_color = Color( 0.282353, 0.282353, 0.282353, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.427451, 0.427451, 0.427451, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0.341176, 0.545098, 0.788235, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 2 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
CheckBox/colors/font_color = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckBox/constants/check_vadjust = 0
CheckBox/constants/hseparation = 4
CheckBox/fonts/font = null
CheckBox/icons/checked = null
CheckBox/icons/radio_checked = null
CheckBox/icons/radio_unchecked = null
CheckBox/icons/unchecked = null
CheckBox/styles/disabled = null
CheckBox/styles/focus = null
CheckBox/styles/hover = null
CheckBox/styles/hover_pressed = null
CheckBox/styles/normal = null
CheckBox/styles/pressed = null
CheckButton/colors/font_color = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 4
CheckButton/fonts/font = null
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
ColorPicker/constants/h_width = 30
ColorPicker/constants/label_width = 10
ColorPicker/constants/margin = 4
ColorPicker/constants/sv_height = 256
ColorPicker/constants/sv_width = 256
ColorPicker/icons/add_preset = null
ColorPicker/icons/color_hue = null
ColorPicker/icons/color_sample = null
ColorPicker/icons/overbright_indicator = null
ColorPicker/icons/preset_bg = null
ColorPicker/icons/screen_picker = null
ColorPickerButton/colors/font_color = Color( 0, 0, 0, 1 )
ColorPickerButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
ColorPickerButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
ColorPickerButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
ColorPickerButton/constants/hseparation = 2
ColorPickerButton/fonts/font = null
ColorPickerButton/icons/bg = null
ColorPickerButton/styles/disabled = null
ColorPickerButton/styles/focus = null
ColorPickerButton/styles/hover = null
ColorPickerButton/styles/normal = null
ColorPickerButton/styles/pressed = null
Dialogs/constants/button_margin = 32
Dialogs/constants/margin = 8
FileDialog/colors/files_disabled = Color( 0, 0, 0, 1 )
FileDialog/colors/folder_icon_modulate = Color( 0, 0, 0, 1 )
FileDialog/icons/folder = null
FileDialog/icons/parent_folder = null
FileDialog/icons/reload = null
FileDialog/icons/toggle_hidden = null
Fonts/fonts/large = null
Fonts/fonts/normal = null
GraphEdit/colors/activity = Color( 0, 0, 0, 1 )
GraphEdit/colors/grid_major = Color( 0, 0, 0, 1 )
GraphEdit/colors/grid_minor = Color( 0, 0, 0, 1 )
GraphEdit/colors/selection_fill = Color( 0, 0, 0, 1 )
GraphEdit/colors/selection_stroke = Color( 0, 0, 0, 1 )
GraphEdit/constants/bezier_len_neg = 160
GraphEdit/constants/bezier_len_pos = 80
GraphEdit/constants/port_grab_distance_horizontal = 48
GraphEdit/constants/port_grab_distance_vertical = 6
GraphEdit/icons/minus = null
GraphEdit/icons/more = null
GraphEdit/icons/reset = null
GraphEdit/icons/snap = null
GraphEdit/styles/bg = null
GraphNode/colors/close_color = Color( 0, 0, 0, 1 )
GraphNode/colors/resizer_color = Color( 0, 0, 0, 1 )
GraphNode/colors/title_color = Color( 0, 0, 0, 1 )
GraphNode/constants/close_offset = 18
GraphNode/constants/port_offset = 3
GraphNode/constants/separation = 1
GraphNode/constants/title_offset = 20
GraphNode/fonts/title_font = null
GraphNode/icons/close = null
GraphNode/icons/port = null
GraphNode/icons/resizer = null
GraphNode/styles/breakpoint = null
GraphNode/styles/comment = null
GraphNode/styles/commentfocus = null
GraphNode/styles/defaultfocus = null
GraphNode/styles/defaultframe = null
GraphNode/styles/frame = null
GraphNode/styles/position = null
GraphNode/styles/selectedframe = null
GridContainer/constants/hseparation = 4
GridContainer/constants/vseparation = 4
HBoxContainer/constants/separation = 4
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = null
HScrollBar/styles/grabber_highlight = null
HScrollBar/styles/grabber_pressed = null
HScrollBar/styles/scroll = null
HScrollBar/styles/scroll_focus = null
HSeparator/constants/separation = 4
HSeparator/styles/separator = null
HSlider/icons/grabber = null
HSlider/icons/grabber_disabled = null
HSlider/icons/grabber_highlight = null
HSlider/icons/tick = null
HSlider/styles/grabber_area = null
HSlider/styles/slider = null
HSplitContainer/constants/autohide = 1
HSplitContainer/constants/separation = 12
HSplitContainer/icons/grabber = null
HSplitContainer/styles/bg = null
Icons/icons/close = null
ItemList/colors/font_color = Color( 0, 0, 0, 1 )
ItemList/colors/font_color_selected = Color( 0, 0, 0, 1 )
ItemList/colors/guide_color = Color( 0, 0, 0, 1 )
ItemList/constants/hseparation = 4
ItemList/constants/icon_margin = 4
ItemList/constants/line_separation = 2
ItemList/constants/vseparation = 2
ItemList/fonts/font = null
ItemList/styles/bg = null
ItemList/styles/bg_focus = null
ItemList/styles/cursor = null
ItemList/styles/cursor_unfocused = null
ItemList/styles/selected = null
ItemList/styles/selected_focus = null
Label/colors/font_color = Color( 0, 0, 0, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/colors/font_outline_modulate = Color( 0, 0, 0, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null
LineEdit/colors/clear_button_color = Color( 0, 0, 0, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
LineEdit/colors/cursor_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0, 0, 0, 1 )
LineEdit/colors/selection_color = Color( 0, 0, 0, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = null
LineEdit/styles/normal = null
LineEdit/styles/read_only = null
LinkButton/colors/font_color = Color( 0, 0, 0, 1 )
LinkButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
LinkButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
LinkButton/constants/underline_spacing = 2
LinkButton/fonts/font = null
LinkButton/styles/focus = null
MarginContainer/constants/margin_bottom = 0
MarginContainer/constants/margin_left = 0
MarginContainer/constants/margin_right = 0
MarginContainer/constants/margin_top = 0
MenuButton/colors/font_color = Color( 0, 0, 0, 1 )
MenuButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
MenuButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
MenuButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
MenuButton/constants/hseparation = 3
MenuButton/fonts/font = null
MenuButton/styles/disabled = null
MenuButton/styles/focus = null
MenuButton/styles/hover = null
MenuButton/styles/normal = null
MenuButton/styles/pressed = null
OptionButton/colors/font_color = Color( 0, 0, 0, 1 )
OptionButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
OptionButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
OptionButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
OptionButton/constants/arrow_margin = 2
OptionButton/constants/hseparation = 2
OptionButton/fonts/font = null
OptionButton/icons/arrow = null
OptionButton/styles/disabled = null
OptionButton/styles/focus = null
OptionButton/styles/hover = null
OptionButton/styles/normal = null
OptionButton/styles/pressed = null
Panel/styles/panel = null
PanelContainer/styles/panel = null
PopupDialog/styles/panel = null
PopupMenu/colors/font_color = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_accel = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_disabled = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_hover = Color( 0, 0, 0, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = null
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null
PopupPanel/styles/panel = null
ProgressBar/colors/font_color = Color( 0, 0, 0, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = null
ProgressBar/styles/fg = null
RichTextLabel/colors/default_color = Color( 0, 0, 0, 1 )
RichTextLabel/colors/font_color_selected = Color( 0, 0, 0, 1 )
RichTextLabel/colors/font_color_shadow = Color( 0, 0, 0, 1 )
RichTextLabel/colors/selection_color = Color( 0, 0, 0, 1 )
RichTextLabel/constants/line_separation = 1
RichTextLabel/constants/shadow_as_outline = 0
RichTextLabel/constants/shadow_offset_x = 1
RichTextLabel/constants/shadow_offset_y = 1
RichTextLabel/constants/table_hseparation = 3
RichTextLabel/constants/table_vseparation = 3
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = null
ScrollContainer/styles/bg = null
SpinBox/icons/updown = null
TabContainer/colors/font_color_bg = Color( 0, 0, 0, 1 )
TabContainer/colors/font_color_disabled = Color( 0, 0, 0, 1 )
TabContainer/colors/font_color_fg = Color( 0, 0, 0, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = null
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = null
TabContainer/styles/tab_bg = null
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = null
Tabs/colors/font_color_bg = Color( 0, 0, 0, 1 )
Tabs/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Tabs/colors/font_color_fg = Color( 0, 0, 0, 1 )
Tabs/constants/hseparation = 4
Tabs/constants/label_valign_bg = 2
Tabs/constants/label_valign_fg = 0
Tabs/constants/top_margin = 24
Tabs/fonts/font = null
Tabs/icons/close = null
Tabs/icons/decrement = null
Tabs/icons/decrement_highlight = null
Tabs/icons/increment = null
Tabs/icons/increment_highlight = null
Tabs/styles/button = null
Tabs/styles/button_pressed = null
Tabs/styles/panel = null
Tabs/styles/tab_bg = null
Tabs/styles/tab_disabled = null
Tabs/styles/tab_fg = null
TextEdit/colors/background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/bookmark_color = Color( 0, 0, 0, 1 )
TextEdit/colors/brace_mismatch_color = Color( 0, 0, 0, 1 )
TextEdit/colors/breakpoint_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_color = Color( 0, 0, 0, 1 )
TextEdit/colors/code_folding_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_existing_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_font_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_scroll_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_selected_color = Color( 0, 0, 0, 1 )
TextEdit/colors/current_line_color = Color( 0, 0, 0, 1 )
TextEdit/colors/executing_line_color = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color_readonly = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
TextEdit/colors/function_color = Color( 0, 0, 0, 1 )
TextEdit/colors/line_number_color = Color( 0, 0, 0, 1 )
TextEdit/colors/mark_color = Color( 0, 0, 0, 1 )
TextEdit/colors/member_variable_color = Color( 0, 0, 0, 1 )
TextEdit/colors/number_color = Color( 0, 0, 0, 1 )
TextEdit/colors/safe_line_number_color = Color( 0, 0, 0, 1 )
TextEdit/colors/selection_color = Color( 0, 0, 0, 1 )
TextEdit/colors/symbol_color = Color( 0, 0, 0, 1 )
TextEdit/colors/word_highlighted_color = Color( 0, 0, 0, 1 )
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 3
TextEdit/constants/line_spacing = 4
TextEdit/fonts/font = null
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = null
TextEdit/styles/focus = null
TextEdit/styles/normal = null
TextEdit/styles/read_only = null
ToolButton/colors/font_color = Color( 0, 0, 0, 1 )
ToolButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
ToolButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
ToolButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
ToolButton/constants/hseparation = 3
ToolButton/fonts/font = null
ToolButton/styles/disabled = null
ToolButton/styles/focus = null
ToolButton/styles/hover = null
ToolButton/styles/normal = null
ToolButton/styles/pressed = null
TooltipLabel/colors/font_color = Color( 0, 0, 0, 1 )
TooltipLabel/colors/font_color_shadow = Color( 0, 0, 0, 1 )
TooltipLabel/constants/shadow_offset_x = 1
TooltipLabel/constants/shadow_offset_y = 1
TooltipLabel/fonts/font = null
TooltipPanel/styles/panel = null
Tree/colors/cursor_color = Color( 0, 0, 0, 1 )
Tree/colors/custom_button_font_highlight = Color( 0, 0, 0, 1 )
Tree/colors/drop_position_color = Color( 0, 0, 0, 1 )
Tree/colors/font_color = Color( 0, 0, 0, 1 )
Tree/colors/font_color_selected = Color( 0, 0, 0, 1 )
Tree/colors/guide_color = Color( 0, 0, 0, 1 )
Tree/colors/relationship_line_color = Color( 0, 0, 0, 1 )
Tree/colors/selection_color = Color( 0, 0, 0, 1 )
Tree/colors/title_button_color = Color( 0, 0, 0, 1 )
Tree/constants/button_margin = 4
Tree/constants/draw_guides = 1
Tree/constants/draw_relationship_lines = 0
Tree/constants/hseparation = 4
Tree/constants/item_margin = 12
Tree/constants/scroll_border = 4
Tree/constants/scroll_speed = 12
Tree/constants/vseparation = 4
Tree/fonts/font = null
Tree/fonts/title_button_font = null
Tree/icons/arrow = null
Tree/icons/arrow_collapsed = null
Tree/icons/checked = null
Tree/icons/select_arrow = null
Tree/icons/unchecked = null
Tree/icons/updown = null
Tree/styles/bg = null
Tree/styles/bg_focus = null
Tree/styles/button_pressed = null
Tree/styles/cursor = null
Tree/styles/cursor_unfocused = null
Tree/styles/custom_button = null
Tree/styles/custom_button_hover = null
Tree/styles/custom_button_pressed = null
Tree/styles/selected = null
Tree/styles/selected_focus = null
Tree/styles/title_button_hover = null
Tree/styles/title_button_normal = null
Tree/styles/title_button_pressed = null
VBoxContainer/constants/separation = 4
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null
VSeparator/constants/separation = 4
VSeparator/styles/separator = null
VSlider/icons/grabber = null
VSlider/icons/grabber_disabled = null
VSlider/icons/grabber_highlight = null
VSlider/icons/tick = null
VSlider/styles/grabber_area = null
VSlider/styles/slider = null
VSplitContainer/constants/autohide = 1
VSplitContainer/constants/separation = 12
VSplitContainer/icons/grabber = null
VSplitContainer/styles/bg = null
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = null

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/Fonts/OpenSans-Bold.ttf"

[sub_resource type="DynamicFont" id=10]
use_mipmaps = true
use_filter = true
font_data = SubResource( 9 )

[node name="Mitosis" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choose" type="Control" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Choose"]
margin_left = -1.0
margin_right = 29999.0
margin_bottom = 921.0
mouse_filter = 2
color = Color( 0.0431373, 0.0588235, 0.564706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Original" type="HBoxContainer" parent="Choose"]
margin_left = 200.0
margin_top = 45.881
margin_right = 2600.0
margin_bottom = 308.881
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Row1" type="HBoxContainer" parent="Choose"]
margin_left = 200.0
margin_top = 180.0
margin_right = 2600.0
margin_bottom = 514.0
rect_scale = Vector2( 0.5, 0.3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneCopies1" type="HBoxContainer" parent="Choose"]
anchor_left = 0.00496063
anchor_top = 0.0352755
anchor_right = 0.00496063
anchor_bottom = 0.0352755
margin_left = 192.063
margin_top = 258.252
margin_right = 2592.06
margin_bottom = 521.252
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Original2" type="HBoxContainer" parent="Choose"]
margin_left = 200.0
margin_top = 410.0
margin_right = 2600.0
margin_bottom = 673.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Row2" type="HBoxContainer" parent="Choose"]
margin_left = 200.0
margin_top = 545.0
margin_right = 2600.0
margin_bottom = 879.0
rect_scale = Vector2( 0.5, 0.3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GeneCopies2" type="HBoxContainer" parent="Choose"]
margin_left = 200.0
margin_top = 650.0
margin_right = 2600.0
margin_bottom = 913.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="UI" type="ColorRect" parent="."]
margin_right = 200.0
margin_bottom = 920.0
color = Color( 0.0431373, 0.0588235, 0.564706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skip" type="Button" parent="UI"]
margin_left = 1.91693
margin_top = 787.639
margin_right = 201.917
margin_bottom = 895.639
theme = SubResource( 6 )
text = "Skip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OriginalLabel" type="RichTextLabel" parent="UI"]
margin_left = 3.58119
margin_top = 67.7401
margin_right = 219.581
margin_bottom = 146.74
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.09
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/italics_font = SubResource( 7 )
custom_fonts/bold_font = SubResource( 8 )
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[b]Original[/b]"
text = "Original"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopyLabel" type="RichTextLabel" parent="UI"]
margin_left = 4.414
margin_top = 310.0
margin_right = 220.414
margin_bottom = 389.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.09
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/italics_font = SubResource( 7 )
custom_fonts/bold_font = SubResource( 8 )
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[b]Copy[/b]"
text = "Copy"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OriginalLabel2" type="RichTextLabel" parent="UI"]
margin_left = 3.239
margin_top = 450.0
margin_right = 219.239
margin_bottom = 529.002
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.09
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/italics_font = SubResource( 7 )
custom_fonts/bold_font = SubResource( 8 )
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[b]Original[/b]"
text = "Original"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopyLabel2" type="RichTextLabel" parent="UI"]
margin_left = 3.823
margin_top = 660.0
margin_right = 219.823
margin_bottom = 739.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.09
custom_fonts/bold_italics_font = ExtResource( 2 )
custom_fonts/italics_font = SubResource( 7 )
custom_fonts/bold_font = SubResource( 8 )
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[b]Copy[/b]"
text = "Copy"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/Skip" to="." method="_on_Skip_pressed"]
